--- a/iccv25.html
+++ b/iccv25.html
@@ -408,7 +408,7 @@
           <div role="tabpanel" class="col-lg-9 tab-pane show active" id="day-1">
             <h3 class="quote-style">Talk <span style="font-size: 0.6em;">Oct 20, 2025</span> </h3>
             <div class="row agenda-item">
-              <div class="col-md-3">1:00 pm - </div>
+              <div class="col-md-3">1:00 -  1:10 pm</div>
               <div class="col-md-9">
                 <h4>Organizers</h4>
               <p>Opening remarks</p>
@@ -416,31 +416,59 @@
               </div>
             </div>
             <div class="row agenda-item">
-              <div class="col-md-3">- pm</div>
+              <div class="col-md-3">1:10 - 1:50 pm</div>
               <div class="col-md-9">
                 <h4>keynote Speaker: TBA</h4>
                 <p>TBA</p>
               </div>
             </div>
             <div class="row agenda-item">
-              <div class="col-md-3">- pm</div>
+              <div class="col-md-3">1:50 - 2:30 pm</div>
               <div class="col-md-9">
                 <h4>keynote Speaker: TBA</h4>
                 <p>TBA</p>
               </div>
             </div>
             <div class="row agenda-item">
-              <div class="col-md-3">- pm</div>
+              <div class="col-md-3">2:30 - 2:45 pm</div>
+              <div class="col-md-9">
+                <h4>Sponsor</h4>
+                <p>TBA</p>
+              </div>
+            </div>
+            <div class="row agenda-item">
+              <div class="col-md-3">2:45 - 3:15pm</div>
+              <div class="col-md-9">
+                <h4>Poster and Break</h4>
+                <p>TBA</p>
+              </div>
+            </div>
+            <div class="row agenda-item">
+              <div class="col-md-3">3:15 - 3:30 pm</div>
+              <div class="col-md-9">
+                <h4>Industrial demo</h4>
+                <p>TBA</p>
+              </div>
+            </div>
+            <div class="row agenda-item">
+              <div class="col-md-3">3:30 - 4:10 pm</div>
               <div class="col-md-9">
                 <h4>keynote Speaker: TBA</h4>
                 <p>TBA</p>
               </div>
             </div>
             <div class="row agenda-item">
-              <div class="col-md-3">- pm</div>
+              <div class="col-md-3">4:10 - 4:50 pm</div>
               <div class="col-md-9">
                 <h4>keynote Speaker: TBA</h4>
                 <p>TBA</p>
+              </div>
+            </div>
+            <div class="row agenda-item">
+              <div class="col-md-3">4:50 - 5:00 pm</div>
+              <div class="col-md-9">
+                <h4>Organizers</h4>
+                <p>Close remarks</p>
               </div>
             </div>
           </div>
