--- a/iccv25.html
+++ b/iccv25.html
@@ -507,6 +507,7 @@
 				<li> GaussianSpeech: Audio-Driven Personalized 3D Gaussian Avatars (ICCV 2025). Shivangi Aneja, Artem Sevastopolsky, Tobias Kirschstein, Justus Thies, Angela Dai, Matthias Nießner. </li>
 				<li>AURELIA: Test-time Reasoning Distillation in Audio-Visual LLMs (ICCV 2025). Sanjoy Chowdhury, Hanan Gani, Nishit Anand, Sayan Nag, Ruohan Gao, Mohamed Elhoseiny, Salman Khan, Dinesh Manocha.
 					<li>FLOAT: Generative Motion Latent Flow Matching for Audio-driven Talking Portrait (ICCV 2025). Taekyung Ki, Dongchan Min, Gyeongsu Chae.</li>
+          <li>VGGSounder: Audio-Visual Evaluations for Foundation Models (ICCV 2025). Daniil Zverev, Thaddäus Wiedemer, Ameya Prabhu, Matthias Bethge, Wieland Brendel, A. Sophia Koepke. </li>
           </ul>
               </div>
             </div>
