update schedule and organizer affiliation

--- a/iccv25.html
+++ b/iccv25.html
@@ -263,7 +263,7 @@
                 <img src="assets/img/orgnizers/shiqi.jpg" alt="Shiqi Yang" style="width: 100%;">
                 <div class="details">
                   <h3>Shiqi Yang</h3>
-                  <p>Chief Research Scientist, SB Intuitions, SoftBank</p>
+                  <p>Research Scientist, SB Intuitions, SoftBank</p>
                 </div>
               </div>
             </a>
@@ -443,7 +443,7 @@
             <div class="row agenda-item">
               <div class="col-md-3">3:15 - 3:30 pm</div>
               <div class="col-md-9">
-                <h4>Industrial demo</h4>
+                <h4>Industrial demo: Veo3</h4>
                 <p>TBA</p>
               </div>
             </div>
