--- a/ijcv25.html
+++ b/ijcv25.html
@@ -228,7 +228,7 @@
                 <img src="assets/img/orgnizers/shiqi.jpg" alt="Shiqi Yang" style="width: 100%;">
                 <div class="details">
                   <h3>Shiqi Yang</h3>
-                  <p>Chief Research Scientist, SB Intuitions</p>
+                  <p>Research Scientist, SB Intuitions</p>
                 </div>
               </div>
             </a>
