--- a/index.html
+++ b/index.html
@@ -88,6 +88,7 @@
         <a href="https://www.ucmerced.edu/" class="scrollto"><img src="assets/img/UC_Merced_Seal.png" alt="UC Merced" title=""></a>
         <a href="https://www.polytechnique.edu/en" class="scrollto"><img src="assets/img/polytechnique.jpg" alt="Polytechnique" title=""></a>
         <a href="https://www.meta.com" class="scrollto"><img src="assets/img/meta.png" alt="Meta" title=""></a>
+        <a href="https://deepmind.google/" class="scrollto"><img src="assets/img/deepmind.png" alt="Google Deepmind" title=""></a>
         <a href="https://www.snapchat.com/" class="scrollto"><img src="assets/img/snapchat-logo.png" alt="Snapchat" title=""></a>
         <a href="https://www.imperial.ac.uk/" class="scrollto"><img src="assets/img/Imperial_College_London_crest.jpg" alt="ICL" title=""></a>
         <a href="https://www.microsoft.com/en-us/research/group/microsoft-research-asia-tokyo/" class="scrollto"><img src="assets/img/Microsoft_logo.png" alt="Microsoft" title=""></a>
@@ -161,7 +162,7 @@
                 <img src="assets/img/orgnizers/shiqi.jpg" alt="Shiqi Yang" style="width: 100%;">
                 <div class="details">
                   <h3>Shiqi Yang</h3>
-                  <p>Chief Research Scientist, SB Intuitions</p>
+                  <p>Research Scientist, SB Intuitions</p>
                 </div>
               </div>
             </a>
