update homepage link Shiqi

--- a/25IJCV/index_old.html
+++ b/25IJCV/index_old.html
@@ -109,7 +109,7 @@
             <br>
             <li>  <a href="https://ami.kaist.ac.kr/">Tae-Hyun Oh</a>: KAIST, South Korea, <a href = "mailto: thoh.kaist.ac.kr@gmail.com">thoh.kaist.ac.kr@gmail.com</a></li>
 
-            <li>  <a href="https://www.shiqiyang.xyz/">Shiqi Yang</a>: SB Intuitions, SoftBank, Japan, <a href = "mailto: shiqi.yang147.jp@gmail.com">shiqi.yang147.jp@gmail.com</a></li>
+            <li>  <a href="https://sites.google.com/view/shiqiyang/">Shiqi Yang</a>: SB Intuitions, SoftBank, Japan, <a href = "mailto: shiqi.yang147.jp@gmail.com">shiqi.yang147.jp@gmail.com</a></li>
 
             <li> <a href="https://lightchaserx.github.io/">Zhixiang Wang</a>: CyberAgent AI Lab, Japan, <a href = "mailto:  wangzx1994@gmail.com"> wangzx1994@gmail.com</a></li>
 
