--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
 
           
           <div class="col-lg-4 col-md-6 col-sm-6" style="width:85%">
-            <a href="https://www.shiqiyang.xyz/">
+            <a href="https://sites.google.com/view/shiqiyang/">
               <div class="speaker">
                 <img src="assets/img/orgnizers/shiqi.jpg" alt="Shiqi Yang" style="width: 100%;">
                 <div class="details">
