--- a/ijcv25.html
+++ b/ijcv25.html
@@ -215,7 +215,7 @@
           </div>
           
           <div class="col-lg-3 col-md-6 col-sm-6" style="width:85%">
-            <a href="https://www.shiqiyang.xyz/">
+            <a href="https://sites.google.com/view/shiqiyang/">
               <div class="speaker">
                 <img src="assets/img/orgnizers/shiqi.jpg" alt="Shiqi Yang" style="width: 100%;">
                 <div class="details">
