--- a/iccv25.html
+++ b/iccv25.html
@@ -406,14 +406,14 @@
             <div class="row agenda-item">
               <div class="col-md-3">1:10 - 1:50 pm</div>
               <div class="col-md-9">
-                <h4>keynote Speaker: TBA</h4>
+                <h4>keynote Speaker: William T. Freeman</h4>
                 <p>TBA</p>
               </div>
             </div>
             <div class="row agenda-item">
               <div class="col-md-3">1:50 - 2:30 pm</div>
               <div class="col-md-9">
-                <h4>keynote Speaker: TBA</h4>
+                <h4>keynote Speaker: Tae-Hyun Oh	</h4>
                 <p>TBA</p>
               </div>
             </div>
@@ -441,14 +441,14 @@
             <div class="row agenda-item">
               <div class="col-md-3">3:30 - 4:10 pm</div>
               <div class="col-md-9">
-                <h4>keynote Speaker: TBA</h4>
+                <h4>keynote Speaker: Chenliang Xu</h4>
                 <p>TBA</p>
               </div>
             </div>
             <div class="row agenda-item">
               <div class="col-md-3">4:10 - 4:50 pm</div>
               <div class="col-md-9">
-                <h4>keynote Speaker: TBA</h4>
+                <h4>keynote Speaker: Andrew Owens</h4>
                 <p>TBA</p>
               </div>
             </div>
