--- a/iccv25.html
+++ b/iccv25.html
@@ -441,7 +441,7 @@
             <div class="row agenda-item">
               <div class="col-md-3">3:30 - 4:10 pm</div>
               <div class="col-md-9">
-                <h4>keynote Speaker: Chenliang Xu</h4>
+                <h4>keynote Speaker: Chenliang Xu (online)</h4>
                 <p>TBA</p>
               </div>
             </div>
