Update iccv25.html with minor wording fixes

--- a/iccv25.html
+++ b/iccv25.html
@@ -394,7 +394,7 @@
           <!-- Schdule Day 1  -->
           <!-- Schdule Day 1  -->
           <div role="tabpanel" class="col-lg-9 tab-pane show active" id="day-1">
-            <h3 class="quote-style">Talk <span style="font-size: 0.6em;">Oct 20, 2025</span> </h3>
+            <h3 class="quote-style">Schedule <span style="font-size: 0.6em;">Oct 20, 2025</span> </h3>
             <div class="row agenda-item">
               <div class="col-md-3">1:00 -  1:10 pm</div>
               <div class="col-md-9">
@@ -406,14 +406,14 @@
             <div class="row agenda-item">
               <div class="col-md-3">1:10 - 1:50 pm</div>
               <div class="col-md-9">
-                <h4>keynote Speaker: William T. Freeman</h4>
+                <h4>Keynote Speaker: William T. Freeman</h4>
                 <p>TBA</p>
               </div>
             </div>
             <div class="row agenda-item">
               <div class="col-md-3">1:50 - 2:30 pm</div>
               <div class="col-md-9">
-                <h4>keynote Speaker: Tae-Hyun Oh	</h4>
+                <h4>Keynote Speaker: Tae-Hyun Oh	</h4>
                 <p>TBA</p>
               </div>
             </div>
@@ -434,21 +434,21 @@
             <div class="row agenda-item">
               <div class="col-md-3">3:15 - 3:30 pm</div>
               <div class="col-md-9">
-                <h4>Industrial demo: Veo3</h4>
+                <h4>Industrial Demo: Veo3</h4>
                 <p>TBA</p>
               </div>
             </div>
             <div class="row agenda-item">
               <div class="col-md-3">3:30 - 4:10 pm</div>
               <div class="col-md-9">
-                <h4>keynote Speaker: Chenliang Xu (online)</h4>
+                <h4>Keynote Speaker: Chenliang Xu (online)</h4>
                 <p>TBA</p>
               </div>
             </div>
             <div class="row agenda-item">
               <div class="col-md-3">4:10 - 4:50 pm</div>
               <div class="col-md-9">
-                <h4>keynote Speaker: Andrew Owens</h4>
+                <h4>Keynote Speaker: Andrew Owens</h4>
                 <p>TBA</p>
               </div>
             </div>
@@ -456,7 +456,7 @@
               <div class="col-md-3">4:50 - 5:00 pm</div>
               <div class="col-md-9">
                 <h4>Organizers</h4>
-                <p>Close remarks</p>
+                <p>Closing remarks</p>
               </div>
             </div>
           </div>
