add 1 ijcv paper to poster

--- a/iccv25.html
+++ b/iccv25.html
@@ -496,7 +496,8 @@
 				<li>AURELIA: Test-time Reasoning Distillation in Audio-Visual LLMs (ICCV 2025). Sanjoy Chowdhury, Hanan Gani, Nishit Anand, Sayan Nag, Ruohan Gao, Mohamed Elhoseiny, Salman Khan, Dinesh Manocha.
 					<li>FLOAT: Generative Motion Latent Flow Matching for Audio-driven Talking Portrait (ICCV 2025). Taekyung Ki, Dongchan Min, Gyeongsu Chae.</li>
           <li>VGGSounder: Audio-Visual Evaluations for Foundation Models (ICCV 2025). Daniil Zverev, Thaddäus Wiedemer, Ameya Prabhu, Matthias Bethge, Wieland Brendel, A. Sophia Koepke. </li>
-          </ul>
+        <li>Taming Data and Transformers for Audio Generation (IJCV SI). Moayed Haji-Ali, Willi Menapace, Aliaksandr Siarohin, Guha Balakrishnan, Vicente Ordonez. </li>  
+        </ul>
               </div>
             </div>
           </div>
