--- a/iccv25.html
+++ b/iccv25.html
@@ -497,7 +497,8 @@
 					<li>FLOAT: Generative Motion Latent Flow Matching for Audio-driven Talking Portrait (ICCV 2025). Taekyung Ki, Dongchan Min, Gyeongsu Chae.</li>
           <li>VGGSounder: Audio-Visual Evaluations for Foundation Models (ICCV 2025). Daniil Zverev, Thaddäus Wiedemer, Ameya Prabhu, Matthias Bethge, Wieland Brendel, A. Sophia Koepke. </li>
         <li>Taming Data and Transformers for Audio Generation (IJCV SI). Moayed Haji-Ali, Willi Menapace, Aliaksandr Siarohin, Guha Balakrishnan, Vicente Ordonez. </li>  
-        </ul>
+      <li> Hearing and Seeing Through CLIP: A Framework for Self-Supervised Sound Source Localization (IJCV SI). Sooyoung Park, Arda Senocak, Joon Son Chung. </li>  
+      </ul>
               </div>
             </div>
           </div>
