add one ijcv si paper to poster

--- a/iccv25.html
+++ b/iccv25.html
@@ -498,7 +498,8 @@
           <li>VGGSounder: Audio-Visual Evaluations for Foundation Models (ICCV 2025). Daniil Zverev, Thaddäus Wiedemer, Ameya Prabhu, Matthias Bethge, Wieland Brendel, A. Sophia Koepke. </li>
         <li>Taming Data and Transformers for Audio Generation (IJCV SI). Moayed Haji-Ali, Willi Menapace, Aliaksandr Siarohin, Guha Balakrishnan, Vicente Ordonez. </li>  
       <li> Hearing and Seeing Through CLIP: A Framework for Self-Supervised Sound Source Localization (IJCV SI). Sooyoung Park, Arda Senocak, Joon Son Chung. </li>  
-      </ul>
+    <li>Audio-Guided Video Scene Editing (IJCV SI). Kaixin Shen, Ruijie Quan, Dong Zheng, Jun Xiao, Yi Yang. </li>  
+    </ul>
               </div>
             </div>
           </div>
