--- a/iccv25.html
+++ b/iccv25.html
@@ -434,8 +434,8 @@
             <div class="row agenda-item">
               <div class="col-md-3">3:15 - 3:30 pm</div>
               <div class="col-md-9">
-                <h4>Industrial Demo: Veo3</h4>
-                <p>TBA</p>
+                <h4>Industrial Demo</h4>
+                <p>Veo 3 by Mohammad Babaeizadeh from Google Deepmind</p>
               </div>
             </div>
             <div class="row agenda-item">
