update schedule format

--- a/iccv25.html
+++ b/iccv25.html
@@ -406,15 +406,15 @@
             <div class="row agenda-item">
               <div class="col-md-3">1:10 - 1:50 pm</div>
               <div class="col-md-9">
-                <h4>Keynote Speaker: William T. Freeman</h4>
-                <p>TBA</p>
+                <h4>Keynote Speaker</h4>
+                <p>William T. Freeman</p>
               </div>
             </div>
             <div class="row agenda-item">
               <div class="col-md-3">1:50 - 2:30 pm</div>
               <div class="col-md-9">
-                <h4>Keynote Speaker: Tae-Hyun Oh	</h4>
-                <p>TBA</p>
+                <h4>Keynote Speaker	</h4>
+                <p>Tae-Hyun Oh</p>
               </div>
             </div>
             <div class="row agenda-item">
@@ -441,15 +441,15 @@
             <div class="row agenda-item">
               <div class="col-md-3">3:30 - 4:10 pm</div>
               <div class="col-md-9">
-                <h4>Keynote Speaker: Chenliang Xu (online)</h4>
-                <p>TBA</p>
+                <h4>Keynote Speaker</h4>
+                <p>Chenliang Xu (online) </p>
               </div>
             </div>
             <div class="row agenda-item">
               <div class="col-md-3">4:10 - 4:50 pm</div>
               <div class="col-md-9">
-                <h4>Keynote Speaker: Andrew Owens</h4>
-                <p>TBA</p>
+                <h4>Keynote Speaker</h4>
+                <p>Andrew Owens</p>
               </div>
             </div>
             <div class="row agenda-item">
