--- a/iccv25.html
+++ b/iccv25.html
@@ -421,14 +421,14 @@
               <div class="col-md-3">2:30 - 2:45 pm</div>
               <div class="col-md-9">
                 <h4>Sponsor</h4>
-                <p>TBA</p>
+                <p>Abaka AI</p>
               </div>
             </div>
             <div class="row agenda-item">
               <div class="col-md-3">2:45 - 3:15pm</div>
               <div class="col-md-9">
                 <h4>Poster and Break</h4>
-                <p>TBA</p>
+                <p> Papers accepted by ICCV25 and IJCV SI </p>
               </div>
             </div>
             <div class="row agenda-item">
